package com.ssm.bridge;

/**
 * @author shaoshao
 * @version 1.0
 * @date 2022/5/20 14:55
 */
public interface Brand {
    void open();

    void close();

    void call();
}
